fix padding on mobile menu

--- a/src/components/TapMenu.css
+++ b/src/components/TapMenu.css
@@ -69,7 +69,6 @@
   width: 40px;
   margin-top: 1px;
   display: inline-block;
-  margin-bottom: 0;
 }
 
 @media screen and (max-width: 750px) {
